<resources>
    <string name="app_name">Music Player</string>
    <string name="Shuffle">Shuffle</string>
    <string name="Favorites">Favourites</string>
    <string name="Playlists">Playlists</string>
    <string name="total_Songs">Total Songs</string>
    <string name="player_title">Paaji da Stereo</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="nav_text">Ajj te music loud\nwajna chaiyeda..</string>
    <string name="Feedback">Feedback</string>
    <string name="Settings">Settings</string>
    <string name="About">About</string>
    <string name="Exit">Exit</string>
    <string name="mins15">15 Minutes</string>
    <string name="mins30">30 Minutes</string>
    <string name="mins60">60 Minutes</string>
    <string name="searchView">Search</string>
    <string name="song_image">Song Image</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="playlist_delete">Delete</string>
    <string name="playlist_your_name">Kimi no na wa</string>
    <string name="add">Add</string>
    <string name="delete_all">Delete All</string>
    <string name="add_to_playlist">Modify Playlist</string>


</resources>