<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/navFeedback"
        android:icon="@drawable/ic_feedback"
        android:contentDescription="@string/Feedback"
        android:title="@string/Feedback"/>

    <item android:id="@+id/navSettings"
        android:icon="@drawable/ic_settings"
        android:contentDescription="@string/Settings"
        android:title="@string/Settings"/>

    <item android:id="@+id/navAbout"
        android:icon="@drawable/ic_about"
        android:contentDescription="@string/About"
        android:title="@string/About"/>

    <item android:id="@+id/navExit"
        android:icon="@drawable/ic_exit"
        android:contentDescription="@string/Exit"
        android:title="@string/Exit"/>
</menu>