<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/bottomDialog">
    <LinearLayout
        android:id="@+id/mins15"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_timer"
            app:tint="@color/cool_pink" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mins15"
            android:paddingTop="2dp"
            android:layout_marginLeft="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mins30"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_timer"
            app:tint="@color/cool_pink" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mins30"
            android:paddingTop="2dp"
            android:layout_marginLeft="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mins60"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_timer"
            app:tint="@color/cool_pink" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mins60"
            android:paddingTop="2dp"
            android:layout_marginLeft="8dp"/>
    </LinearLayout>

</LinearLayout>